# Spacy

./: .gitignore  CMakeLists.txt  default.cfg  notes.md
Net/include/: NetClient.h  NetServer.h  PacketManager.h  PacketManagerServer.h  User.h
Net/src/: NetClient.cpp  NetServer.cpp  PacketManager.cpp  PacketManagerServer.cpp  User.cpp
Net/tests/: bind_test.cpp  packet_test.cpp
client/: main.cpp
client/include/: ActionManager.h  ActionServer.h  BulletModel.h  EventClient.h  Game.h  Graphics.h  PlayerModel.h  Utils.h  actionManager.h  actionServer.h  structConfig.h  stuctClient.h  vector.h
client/src/: ActionServer.cpp  BulletModel.cpp  Graphics.cpp  PlayerModel.cpp  actionManager.cpp  actionServer.cpp
server/include/: CollisionManager.h  Collisions.h  Event.h  GameEnvironment.h  Object.h  ObjectManager.h
server/src/: CollisionManager.cpp  Collisions.cpp  Event.cpp  GameEnvironment.cpp  ObjectManager.cpp  main.cpp
